--- a/LetzchaatFrontEnd/WebContent/images/style.css
+++ b/LetzchaatFrontEnd/WebContent/images/style.css
@@ -295,13 +295,13 @@ margin-right: 7px;
 img{
   margin: auto;
   width: 100%;
-  height:350px;
+  min-height:100%;
  
  
  
 }
 #slides_control {
- width:100%; height:350px;margin:auto;
+ width:100%; min-height:100%;margin:auto;
  overflow: hidden;
   padding-top: 20px;
 }
