--- a/LetzchaatFrontEnd/WebContent/images/style.css
+++ b/LetzchaatFrontEnd/WebContent/images/style.css
@@ -41,7 +41,7 @@ p {
 }
 
 a {
-	color: #FF3002;
+	color: blue;
 }
 
 strong {
@@ -305,6 +305,103 @@ img{
  overflow: hidden;
   padding-top: 20px;
 }
+
+
+/*SEARCH STYLE*/
+
+
+
+#custom-search-input {
+        margin:0;
+        margin-top: 20px;
+        padding: 0;
+        margin-bottom:35px;
+    }
+ 
+    #custom-search-input .search-query {
+        padding-right: 3px;
+        padding-right: 4px \9;
+        padding-left: 3px;
+        padding-left: 4px \9;
+        /* IE7-8 doesn't have border-radius, so don't indent the padding */
+ 
+        margin-bottom: 0;
+        -webkit-border-radius: 3px;
+        -moz-border-radius: 3px;
+        border-radius: 3px;
+    }
+ 
+    #custom-search-input button {
+        border: 0;
+        background: none;
+        /** belows styles are working good */
+        padding: 2px 5px;
+        margin-top: 2px;
+        position: relative;
+        left: -28px;
+        /* IE7-8 doesn't have border-radius, so don't indent the padding */
+        margin-bottom: 0;
+        -webkit-border-radius: 3px;
+        -moz-border-radius: 3px;
+        border-radius: 3px;
+        color:#D9230F;
+    }
+ 
+    .search-query:focus + button {
+        z-index: 3;   
+    }
+
+/*SEARCHED JOBS STYLE*/
+
+.featured-jobs {
+  padding: 70px 0px;
+  background: #f2f0f1;
+}
+.featured-jobs .thumbnail {
+  padding: 20px;
+}
+
+.featured-jobs .thumbnail .feature-link h3 {
+  padding-left: 10px;
+  margin: 0 0 6px;
+  font-size: 23px;
+}
+.featured-jobs .thumbnail .meta {
+  color: #f16060;
+  font-size: 11px;
+}
+.featured-jobs .thumbnail p {
+  font-size: 15px;
+  /* margin: 0 0 5px; */
+}
+.featured-jobs .thumbnail .feature-btns {
+  position: absolute;
+  margin-top:20px;
+  padding-top:20px;
+ /*  bottom: -13px; */
+  /* left: 15px; */
+}
+
+@media only screen and (max-width: 1024px) {
+
+.thumbnail { margin-bottom:50px; }
+
+.featured-jobs .thumbnail .feature-btns { bottom:17px; }
+
+
+    }
+
+@media only screen and (max-width: 790px) {
+
+.thumbnail { margin-bottom:50px; }
+
+.featured-jobs .thumbnail .feature-btns { bottom:-33px; }
+
+
+    }
+
+
+
 
 
 
