--- a/LetzchaatFrontEnd/WebContent/images/style.css
+++ b/LetzchaatFrontEnd/WebContent/images/style.css
@@ -399,12 +399,257 @@ img{
 
 
     }
+    
+    
+   /*  CHAT STYLE
+     */
+    .chat
+{
+    list-style: none;
+    margin: 0;
+    padding: 0;
+}
+
+.chat li
+{
+    margin-bottom: 10px;
+    padding-bottom: 5px;
+    border-bottom: 1px dotted #B3A9A9;
+}
+
+.chat li.left .chat-body
+{
+    margin-left: 60px;
+}
+
+.chat li.right .chat-body
+{
+    margin-right: 60px;
+}
+
+
+.chat li .chat-body p
+{
+    margin: 0;
+    color: #777777;
+}
+
+.panel .slidedown .glyphicon, .chat .glyphicon
+{
+    margin-right: 5px;
+}
+
+.panel-body
+{
+    overflow-y: scroll;
+    height: 250px;
+}
+
+::-webkit-scrollbar-track
+{
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+    background-color: #F5F5F5;
+}
+
+::-webkit-scrollbar
+{
+    width: 12px;
+    background-color: #F5F5F5;
+}
+
+::-webkit-scrollbar-thumb
+{
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,.3);
+    background-color: #555;
+}
+    
+    
+    
+    .row{
+    margin-top:40px;
+    padding: 0 10px;
+}
+
+.clickable{
+    cursor: pointer;   
+}
+
+.panel-heading span {
+	margin-top: -20px;
+	font-size: 15px;
+}
 
 
 
+/* BLOGS /NEWS UPDATES/ EVENTS STYLES */
+
+.post-slide {
+    margin: 0 15px;
+    position: relative;
+    background: #FFF;
+}
+.post-slide .post-img {
+    position: relative;
+    overflow: hidden;
+}
+.post-slide .post-img img {
+    width: 100%;
+    height: auto;
+}
+.post-slide .over-layer {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    opacity: 0;
+    background: rgba(0, 0, 0, 0.6);
+    transition: all 0.30s ease;
+}
+.post-slide:hover .over-layer {
+    opacity: 1;
+}
+.post-slide .post-link {
+    margin: 0;
+    padding: 0;
+    position: relative;
+    top: 45%;
+    text-align: center;
+}
+.post-slide .post-link li {
+    display: inline-block;
+    list-style: none;
+    margin: -9px 0 0;
+}
+.post-slide .post-link li a {
+    color: #FFF;
+    font-size: 39px;
+}
+.post-slide .post-link li a:hover {
+    color: #FF8B3D;
+    text-decoration: none;
+}
+.post-slide .post-date {
+    position: absolute;
+    top: 10%;
+    left: 4%;
+}
+.post-slide .date {
+    display: inline-block;
+    border-radius: 3px 0 0 3px;
+    padding: 5px 10px;
+    color: #FFF;
+    font-size: 20px;
+    font-weight: bold;
+    text-align: center;
+    background: #333;
+    float: left;
+}
+.post-slide .month {
+    display: inline-block;
+    border-radius: 0 3px 3px 0;
+    padding: 5px 13px;
+    color: #111;
+    font-size: 20px;
+    font-weight: bold;
+    background: #FF8B3D;
+}
+.post-slide .post-content {
+    padding: 30px;
+    background-color: #F5F5F6;
+}
+.post-slide .post-title {
+    margin: 0 0 15px 0;
+}
+.post-slide .post-title a {
+    font-size: 17px;
+    font-weight: bold;
+    color: #333;
+    display: inline-block;
+    transition: all 0.3s ease 0s;
+}
+.post-slide .post-title a:hover {
+    text-decoration: none;
+    color: #FF8B3D;
+}
+.post-slide .post-description {
+    font-size: 14px;
+    line-height: 22px;
+    color: #444444;
+    padding: 0 0 10px 0;
+}
+.post-slide .read-more {
+    color: #333;
+    font-size: 14px;
+    font-weight: bold;
+    text-transform: uppercase;
+    position: relative;
+    transition: color 0.20s linear;
+}
+.post-slide .read-more:hover {
+    text-decoration: none;
+    color: #FF8B3D;
+}
+.post-slide .read-more:after {
+    content: "";
+    position: absolute;
+    width: 30%;
+    display: block;
+    border: 1px solid #FF8B3D;
+    transition: all 0.30s ease;
+}
+.post-slide .read-more:hover:after {
+    width: 100%;
+}
+@media only screen and (max-width: 479px) {
+    .post-slide .month {
+        font-size: 14px;
+    }
+    .post-slide .date {
+        font-size: 14px;
+    }
+}
+div.clanky .row {
+    padding-top: 35px;
+}
 
 
 
+/* FOOTER STYLE */
+
+
+.social:hover {
+     -webkit-transform: scale(1.1);
+     -moz-transform: scale(1.1);
+     -o-transform: scale(1.1);
+ }
+ .social {
+     -webkit-transform: scale(0.8);
+     /* Browser Variations: */
+     
+     -moz-transform: scale(0.8);
+     -o-transform: scale(0.8);
+     -webkit-transition-duration: 0.5s;
+     -moz-transition-duration: 0.5s;
+     -o-transition-duration: 0.5s;
+ }
+
+/*
+    Multicoloured Hover Variations
+*/
+ 
+ #social-fb:hover {
+     color: #0000a0;
+ }
+ #social-tw:hover {
+     color: #4099FF;
+ }
+ #social-gp:hover {
+     color: #d34836;
+ }
+ #social-em:hover {
+     color: #f39c12;
+ }
 
 
 
